# djvulibre

./: CMakeLists.txt  README.md
cmake/: FindLeptonica.cmake
libdjvu/: Arrays.h  ByteStream.cpp  ByteStream.h  CMakeLists.txt  DjVuGlobal.h  DjVuPalette.cpp  GBitmap.cpp  GContainer.h  GPixmap.cpp  GSmartPointer.h  GString.cpp  GString.h  GThreads.h  ddjvuapi.h  miniexp.h
minidjvu/: CMakeLists.txt
minidjvu/doc/: tifftodjvu_help.html
minidjvu/include/minidjvu/alg/: classify.h  compress.h  render.h
minidjvu/include/minidjvu/base/: 1error.h  version.h
minidjvu/include/minidjvu/image-io/: bmp.h  pbm.h  tiff.h
minidjvu/src/alg/: classify.c  compress.c
minidjvu/src/base/: 1error.c
minidjvu/src/djvu/: djvusave.c
minidjvu/src/image-io/: bmp.cpp  tiff.c  tiffload.c
minidjvu/src/windows/: minidjvu.nsi  tifftodjvu.hta
minidjvu/tools/: minidjvu.cpp
tools/: CMakeLists.txt  cjb2.cpp  cpaldjvu.cpp  ddjvu.cpp  djvm.cpp  djvups.cpp  djvutxt.cpp  jb2tune.cpp  jb2tune.h
tsv2dsed/: CMakeLists.txt  tsv2dsed.cpp
xmltools/: CMakeLists.txt  djvuxml.1.cmake
